[package]
name = "warp_webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
http = "1.1.0"
chrono = "0.4"
md5 = "0.7.0"
thiserror = "1.0"
regex = "1.10.5"
lazy_static = "1.5.0"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"